<?xml version="1.0"?>
<package format="2">
  <name>ugv_sdk</name>
  <version>1.0.1</version>
  <description>Weston Robot Platform SDK</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>

  <license>BSD</license>

  <url type="website">https://www.westonrobot.com/</url>
  <url type="bugtracker">https://github.com/westonrobot/ugv_sdk/issues</url>
  <url type="repository">https://github.com/westonrobot/ugv_sdk</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>asio</depend>
  <export></export>
</package>
